--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,8 @@
 {
-  "eslint.useFlatConfig": true
+  "eslint.useFlatConfig": true,
+  "files.exclude": {
+    "**/.astro": true,
+    "**/node_modules": true,
+    "**/bun.lockb": true
+  }
 }
