--- a/package.json
+++ b/package.json
@@ -30,11 +30,13 @@
     "@astrojs/sitemap": "^3.2.0",
     "@astrojs/tailwind": "^5.1.1",
     "@eslint/js": "^9.12.0",
+    "@iconify-json/solar": "^1.2.0",
     "@tailwindcss/typography": "^0.5.15",
     "@types/eslint__js": "^8.42.3",
     "@types/react": "^18.3.11",
     "@typescript-eslint/eslint-plugin": "^8.8.0",
     "@typescript-eslint/parser": "^8.8.0",
+    "astro-link": "^1.2.1",
     "daisyui": "^4.12.12",
     "eslint": "^9.12.0",
     "eslint-plugin-astro": "^1.2.4",
@@ -44,6 +46,7 @@
     "sharp": "^0.33.5",
     "tailwindcss": "^3.4.13",
     "tw-to-css": "^0.0.12",
+    "twitter-post-mockup": "github:andreasnicklaus/twitter-post-mockup",
     "typescript": "^5.6.2",
     "typescript-eslint": "^8.8.0"
   }
