--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "tailwind-merge": "^2.5.3"
   },
   "devDependencies": {
+    "@antfu/eslint-config": "^3.8.0",
     "@astrojs/check": "^0.9.4",
     "@astrojs/mdx": "^3.1.7",
     "@astrojs/rss": "^4.0.7",
@@ -31,23 +32,35 @@
     "@astrojs/tailwind": "^5.1.1",
     "@eslint/js": "^9.12.0",
     "@iconify-json/solar": "^1.2.0",
+    "@prettier/plugin-xml": "^3.4.1",
     "@tailwindcss/typography": "^0.5.15",
     "@types/eslint__js": "^8.42.3",
     "@types/react": "^18.3.11",
     "@typescript-eslint/eslint-plugin": "^8.8.0",
-    "@typescript-eslint/parser": "^8.8.0",
+    "@typescript-eslint/parser": "^8.12.2",
+    "astro-eslint-parser": "^1.0.3",
     "astro-link": "^1.2.1",
     "daisyui": "^4.12.12",
     "eslint": "^9.12.0",
-    "eslint-plugin-astro": "^1.2.4",
-    "eslint-plugin-jsx-a11y": "^6.10.0",
+    "eslint-plugin-astro": "^1.3.0",
+    "eslint-plugin-format": "^0.1.2",
+    "eslint-plugin-jsx-a11y": "^6.10.2",
     "globals": "^15.10.0",
+    "lint-staged": "^15.2.10",
+    "prettier-plugin-astro": "^0.14.1",
     "react": "^18.3.1",
     "sharp": "^0.33.5",
+    "simple-git-hooks": "^2.11.1",
     "tailwindcss": "^3.4.13",
     "tw-to-css": "^0.0.12",
     "twitter-post-mockup": "github:andreasnicklaus/twitter-post-mockup",
     "typescript": "^5.6.2",
     "typescript-eslint": "^8.8.0"
+  },
+  "simple-git-hooks": {
+    "pre-commit": "bun run lint-staged"
+  },
+  "lint-staged": {
+    "*": "eslint --fix"
   }
 }
