--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "preview:host": "astro preview --host",
     "astro": "astro",
     "regen": "fish -c 'npmregen'",
-    "lint": "eslint .",
-    "lint:fix": "eslint . --fix"
+    "lint": "eslint . --flag unstable_ts_config",
+    "lint:fix": "eslint . --fix --flag unstable_ts_config"
   },
   "dependencies": {
     "astro": "^4.15.11",
@@ -46,6 +46,7 @@
     "eslint-plugin-format": "^0.1.2",
     "eslint-plugin-jsx-a11y": "^6.10.2",
     "globals": "^15.10.0",
+    "jiti": "^2.4.0",
     "lint-staged": "^15.2.10",
     "react": "^18.3.1",
     "sharp": "^0.33.5",
