--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,6 @@ node_modules/
 .tmp
 
 # user-specific files
-**/.cursorignore
-**/.cursorrules
-**/.dev/
+# **/.cursorignore
+# **/.cursorrules
+# **/.dev/
