--- a/package.json
+++ b/package.json
@@ -8,29 +8,23 @@
     "build": "astro check && astro build",
     "preview": "astro preview",
     "preview:host": "astro preview --host",
-    "astro": "astro",
     "regen": "fish -c 'npmregen'",
     "lint": "eslint . --flag unstable_ts_config",
     "lint:fix": "eslint . --fix --flag unstable_ts_config"
   },
   "dependencies": {
-    "astro": "^4.15.11",
-    "astro-embed": "^0.7.2",
-    "astro-font": "^0.1.81",
-    "astro-icon": "^1.1.1",
-    "astro-opengraph-images": "^1.11.3",
-    "astro-seo": "^0.8.4",
-    "clsx": "^2.1.1",
-    "tailwind-merge": "^2.5.3"
-  },
-  "devDependencies": {
-    "@antfu/eslint-config": "^3.8.0",
-    "@astrojs/check": "^0.9.4",
     "@astrojs/mdx": "^3.1.7",
     "@astrojs/rss": "^4.0.7",
     "@astrojs/sitemap": "^3.2.0",
     "@astrojs/tailwind": "^5.1.1",
-    "@eslint/js": "^9.12.0",
+    "astro": "^4.15.11",
+    "sharp": "^0.33.5",
+    "tailwindcss": "^3.4.13"
+  },
+  "devDependencies": {
+    "@antfu/eslint-config": "^3.8.0",
+    "@astrojs/check": "^0.9.4",
+    "@eslint/js": "^9.14.0",
     "@iconify-json/solar": "^1.2.0",
     "@prettier/plugin-xml": "^3.4.1",
     "@tailwindcss/typography": "^0.5.15",
@@ -38,22 +32,24 @@
     "@types/react": "^18.3.11",
     "@typescript-eslint/eslint-plugin": "^8.8.0",
     "@typescript-eslint/parser": "^8.12.2",
+    "astro-embed": "^0.7.4",
     "astro-eslint-parser": "^1.0.3",
+    "astro-font": "^0.1.81",
+    "astro-icon": "^1.1.1",
     "astro-link": "^1.2.1",
+    "astro-opengraph-images": "^1.11.3",
+    "astro-seo": "^0.8.4",
+    "clsx": "^2.1.1",
     "daisyui": "^4.12.12",
-    "eslint": "^9.12.0",
+    "depcheck": "^1.4.7",
+    "eslint": "^9.14.0",
     "eslint-plugin-astro": "^1.3.0",
     "eslint-plugin-format": "^0.1.2",
-    "eslint-plugin-jsx-a11y": "^6.10.2",
-    "globals": "^15.10.0",
-    "jiti": "^2.4.0",
     "lint-staged": "^15.2.10",
     "react": "^18.3.1",
-    "sharp": "^0.33.5",
     "simple-git-hooks": "^2.11.1",
-    "tailwindcss": "^3.4.13",
+    "tailwind-merge": "^2.5.3",
     "tw-to-css": "^0.0.12",
-    "twitter-post-mockup": "github:andreasnicklaus/twitter-post-mockup",
     "typescript": "^5.6.2",
     "typescript-eslint": "^8.8.0"
   },
