--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@astrojs/sitemap": "^3.2.0",
     "@astrojs/tailwind": "^5.1.1",
     "astro": "^4.15.11",
+    "astro-breadcrumbs": "^3.2.0",
     "sharp": "^0.33.5",
     "tailwindcss": "^3.4.13"
   },
