--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
     "@astrojs/tailwind": "^5.1.1",
     "astro": "^4.15.11",
     "astro-breadcrumbs": "^3.2.0",
+    "astro-compressor": "^0.4.1",
+    "astro-purgecss": "^4.6.1",
+    "purgecss": "^6.0.0",
     "sharp": "^0.33.5",
     "tailwindcss": "^3.4.13"
   },
