--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@astrojs/rss": "^4.0.7",
     "@astrojs/sitemap": "^3.2.0",
     "@astrojs/tailwind": "^5.1.1",
+    "@playform/inline": "^0.1.0",
     "astro": "^4.15.11",
     "astro-breadcrumbs": "^3.2.0",
     "astro-compressor": "^0.4.1",
