--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "version": "1.0.0",
   "scripts": {
     "prepare": "fish -c 'towebp /src/content/artwork'",
-    "predev": "bun run prepare && astro sync && astro check",
+    "predev": "bun run prepare && astro sync",
     "dev": "astro dev",
     "dev:host": "astro dev --host",
-    "prebuild": "bun run prepare-assets && astro sync && astro check",
+    "prebuild": "bun run prepare && astro sync && astro check",
     "build": "astro build",
     "preview": "astro preview",
     "preview:host": "astro preview --host",
