--- a/package.json
+++ b/package.json
@@ -3,15 +3,9 @@
   "type": "module",
   "version": "1.0.0",
   "scripts": {
-    "prepare": "fish -c 'towebp /src/content/artwork'",
-    "predev": "bun run prepare && astro sync",
-    "dev": "astro dev",
-    "dev:host": "astro dev --host",
-    "prebuild": "bun run prepare && astro sync && astro check",
-    "build": "astro build",
-    "preview": "astro preview",
-    "preview:host": "astro preview --host",
-    "regen": "fish -c 'npmregen'",
+    "regen": "fish -c 'npmregen' && fish -c 'towebp /src/content/artwork'",
+    "dev": "astro sync && astro dev",
+    "build": "astro sync && astro check && astro build",
     "lint": "eslint . --flag unstable_ts_config",
     "lint:fix": "eslint . --fix --flag unstable_ts_config"
   },
@@ -62,7 +56,7 @@
     "typescript-eslint": "^8.8.0"
   },
   "simple-git-hooks": {
-    "pre-commit": "bun run prepare && bun run predev && bun run lint-staged"
+    "pre-commit": "fish -c 'towebp /src/content/artwork --force' && bun run prebuild && bun run lint-staged"
   },
   "lint-staged": {
     "*": "eslint --fix"
