--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "type": "module",
   "version": "1.0.0",
   "scripts": {
-    "regen": "fish -c 'npmregen' && fish -c 'towebp /src/content/artwork'",
+    "regen": "fish -c 'npmregen'",
+    "towebp": "fish -c 'towebp /src/content/artwork --force'",
     "dev": "astro sync && astro dev",
     "build": "astro sync && astro check && astro build",
     "lint": "eslint . --flag unstable_ts_config",
@@ -56,7 +57,7 @@
     "typescript-eslint": "^8.8.0"
   },
   "simple-git-hooks": {
-    "pre-commit": "fish -c 'towebp /src/content/artwork --force' && bun run prebuild && bun run lint-staged"
+    "pre-commit": "bun run towebp && bun run lint-staged"
   },
   "lint-staged": {
     "*": "eslint --fix"
