pre biome migration

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,13 @@
     "paths": {
       "@*": ["./src/*"]
     },
-    "strictNullChecks": true
-  }
+    "strictNullChecks": true,
+    "plugins": [
+      {
+        "name": "@astrojs/ts-plugin"
+      }
+    ]
+  },
+  "include": [".astro/types.d.ts", "**/*"],
+  "exclude": ["dist"]
 }
