--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   "devDependencies": {
     "@antfu/eslint-config": "^3.8.0",
     "@astrojs/check": "^0.9.4",
+    "@astrojs/ts-plugin": "^1.10.4",
     "@eslint/js": "^9.14.0",
     "@iconify-json/solar": "^1.2.1",
     "@prettier/plugin-xml": "^3.4.1",
