--- a/package.json
+++ b/package.json
@@ -3,12 +3,11 @@
   "type": "module",
   "version": "1.0.0",
   "scripts": {
-    "regen": "fish -c 'npmregen'",
-    "towebp": "fish -c 'towebp /src/content/artwork --force'",
     "dev": "astro sync && astro dev",
     "build": "astro sync && astro check && astro build",
     "lint": "eslint . --flag unstable_ts_config",
-    "lint:fix": "eslint . --fix --flag unstable_ts_config"
+    "format": "prettier --write .",
+    "fix": "bun run astro sync && bun run lint && bun run format"
   },
   "dependencies": {
     "@astrojs/mdx": "^3.1.7",
@@ -20,6 +19,7 @@
     "astro-breadcrumbs": "^3.2.0",
     "astro-compressor": "^0.4.1",
     "astro-purgecss": "^4.6.1",
+    "prettier-plugin-astro": "^0.14.1",
     "purgecss": "^6.0.0",
     "sharp": "^0.33.5",
     "tailwindcss": "^3.4.13"
@@ -35,7 +35,7 @@
     "@types/eslint__js": "^8.42.3",
     "@types/react": "^18.3.11",
     "@typescript-eslint/eslint-plugin": "^8.8.0",
-    "@typescript-eslint/parser": "^8.12.2",
+    "@typescript-eslint/parser": "^8.13.0",
     "astro-embed": "^0.7.4",
     "astro-eslint-parser": "^1.0.3",
     "astro-font": "^0.1.81",
@@ -49,7 +49,11 @@
     "eslint": "^9.14.0",
     "eslint-plugin-astro": "^1.3.0",
     "eslint-plugin-format": "^0.1.2",
+    "eslint-plugin-jsx-a11y": "^6.10.2",
     "lint-staged": "^15.2.10",
+    "prettier": "^3.3.3",
+    "prettier-config-standard": "^7.0.0",
+    "prettier-plugin-tailwindcss": "^0.6.8",
     "react": "^18.3.1",
     "simple-git-hooks": "^2.11.1",
     "tailwind-merge": "^2.5.3",
@@ -58,9 +62,10 @@
     "typescript-eslint": "^8.8.0"
   },
   "simple-git-hooks": {
-    "pre-commit": "bun run towebp && bun run lint-staged"
+    "pre-commit": "bun run lint-staged"
   },
   "lint-staged": {
-    "*": "eslint --fix"
+    "*.astro": "prettier --write",
+    "*": "eslint --fix --flag unstable_ts_config"
   }
 }
