--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "astro sync && astro check && astro build",
     "lint": "eslint . --flag unstable_ts_config",
     "format": "prettier --write .",
-    "fix": "bun run astro sync && bun run lint && bun run format"
+    "fix": "bun run astro sync && bun run lint && bun run format",
+    "convert-images": "bun run scripts/convert-images.ts"
   },
   "dependencies": {
     "@astrojs/mdx": "^3.1.7",
@@ -32,6 +33,7 @@
     "@iconify-json/solar": "^1.2.1",
     "@prettier/plugin-xml": "^3.4.1",
     "@tailwindcss/typography": "^0.5.15",
+    "@types/bun": "^1.1.13",
     "@types/eslint__js": "^8.42.3",
     "@types/react": "^18.3.11",
     "@typescript-eslint/eslint-plugin": "^8.8.0",
@@ -50,7 +52,9 @@
     "eslint-plugin-astro": "^1.3.0",
     "eslint-plugin-format": "^0.1.2",
     "eslint-plugin-jsx-a11y": "^6.10.2",
+    "kleur": "^4.1.5",
     "lint-staged": "^15.2.10",
+    "ora": "^8.1.1",
     "prettier": "^3.3.3",
     "prettier-config-standard": "^7.0.0",
     "prettier-plugin-tailwindcss": "^0.6.8",
@@ -62,7 +66,7 @@
     "typescript-eslint": "^8.8.0"
   },
   "simple-git-hooks": {
-    "pre-commit": "bun run lint-staged"
+    "pre-commit": "bun run convert-images && bun run lint-staged"
   },
   "lint-staged": {
     "*.astro": "prettier --write",
