--- a/package.json
+++ b/package.json
@@ -11,19 +11,18 @@
     "prebuild": "bun run scripts/convert-images.ts && bun run scripts/sync-images.ts"
   },
   "dependencies": {
-    "@astrojs/mdx": "^3.1.7",
-    "@astrojs/rss": "^4.0.7",
-    "@astrojs/sitemap": "^3.2.0",
-    "@astrojs/tailwind": "^5.1.1",
+    "@astrojs/mdx": "^3.1.9",
+    "@astrojs/rss": "^4.0.9",
+    "@astrojs/sitemap": "^3.2.1",
+    "@astrojs/tailwind": "^5.1.2",
     "@playform/inline": "^0.1.0",
-    "astro": "^4.15.11",
+    "astro": "^4.16.10",
     "astro-breadcrumbs": "^3.2.0",
     "astro-compressor": "^0.4.1",
     "astro-purgecss": "^4.6.1",
-    "prettier-plugin-astro": "^0.14.1",
     "purgecss": "^6.0.0",
     "sharp": "^0.33.5",
-    "tailwindcss": "^3.4.13"
+    "tailwindcss": "^3.4.14"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^3.8.0",
@@ -35,18 +34,18 @@
     "@tailwindcss/typography": "^0.5.15",
     "@types/bun": "^1.1.13",
     "@types/eslint__js": "^8.42.3",
-    "@types/react": "^18.3.11",
-    "@typescript-eslint/eslint-plugin": "^8.8.0",
+    "@types/react": "^18.3.12",
+    "@typescript-eslint/eslint-plugin": "^8.13.0",
     "@typescript-eslint/parser": "^8.13.0",
     "astro-embed": "^0.7.4",
     "astro-eslint-parser": "^1.0.3",
     "astro-font": "^0.1.81",
-    "astro-icon": "^1.1.1",
+    "astro-icon": "^1.1.2",
     "astro-link": "^1.2.1",
-    "astro-opengraph-images": "^1.11.3",
+    "astro-opengraph-images": "^1.11.6",
     "astro-seo": "^0.8.4",
     "clsx": "^2.1.1",
-    "daisyui": "^4.12.12",
+    "daisyui": "^4.12.14",
     "depcheck": "^1.4.7",
     "eslint": "^9.14.0",
     "eslint-plugin-astro": "^1.3.0",
@@ -57,13 +56,14 @@
     "ora": "^8.1.1",
     "prettier": "^3.3.3",
     "prettier-config-standard": "^7.0.0",
+    "prettier-plugin-astro": "0.13.0",
     "prettier-plugin-tailwindcss": "^0.6.8",
     "react": "^18.3.1",
     "simple-git-hooks": "^2.11.1",
-    "tailwind-merge": "^2.5.3",
+    "tailwind-merge": "^2.5.4",
     "tw-to-css": "^0.0.12",
-    "typescript": "^5.6.2",
-    "typescript-eslint": "^8.8.0"
+    "typescript": "^5.6.3",
+    "typescript-eslint": "^8.13.0"
   },
   "simple-git-hooks": {
     "pre-commit": "bun run prebuild && bun run lint-staged"
