--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "astro-purgecss": "^4.6.1",
     "purgecss": "^6.0.0",
     "sharp": "^0.33.5",
+    "spotify-url-info": "^3.2.17",
     "tailwindcss": "^3.4.14"
   },
   "devDependencies": {
