--- a/.gitignore
+++ b/.gitignore
@@ -20,6 +20,6 @@ node_modules/
 .tmp
 
 # user-specific files
-# **/.cursorignore
-# **/.cursorrules
-# **/.dev/
+**/.cursorignore
+**/.cursorrules
+**/.dev/
