--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@types/react": "^18.3.12",
     "@typescript-eslint/eslint-plugin": "^8.13.0",
     "@typescript-eslint/parser": "^8.13.0",
+    "astro-devtool-breakpoints": "^0.3.0",
     "astro-embed": "^0.7.4",
     "astro-eslint-parser": "^1.0.3",
     "astro-font": "^0.1.81",
