--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "build": "bun install --force && astro sync && astro build",
     "preview": "astro preview",
     "check": "astro check",
-    "lint": "eslint . --flag unstable_ts_config --fix && prettier --write ."
+    "lint": "eslint . --flag unstable_ts_config --fix && prettier --write .",
+    "debug-spotify-art": "bun run scripts/debug-spotify-art.ts"
   },
   "dependencies": {
     "@astrojs/mdx": "4.0.0-beta.3",
