--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@playform/inline": "^0.1.0",
     "astro": "5.0.0-beta.7",
     "astro-breadcrumbs": "^3.2.0",
+    "astro-capo": "^0.0.1",
     "astro-compressor": "^0.4.1",
     "astro-purgecss": "^4.6.2",
     "purgecss": "^6.0.0",
@@ -49,7 +50,6 @@
     "astro-icon": "^1.1.2",
     "astro-link": "^1.2.1",
     "astro-opengraph-images": "^1.11.7",
-    "astro-seo": "^0.8.4",
     "clsx": "^2.1.1",
     "daisyui": "^4.12.14",
     "depcheck": "^1.4.7",
