feat(content): add 'this website' blog post and site attributions

--- a/package.json
+++ b/package.json
@@ -11,16 +11,16 @@
     "lint": "eslint . --flag unstable_ts_config --fix && prettier --write ."
   },
   "dependencies": {
-    "@astrojs/mdx": "4.0.0-beta.3",
-    "@astrojs/rss": "^4.0.9",
+    "@astrojs/mdx": "^4.1.1",
+    "@astrojs/rss": "^4.0.11",
     "@astrojs/sitemap": "^3.2.1",
-    "@astrojs/tailwind": "^5.1.2",
+    "@astrojs/tailwind": "^6.0.0",
     "@playform/inline": "^0.1.0",
-    "astro": "5.0.0-beta.7",
+    "astro": "^5.4.3",
     "astro-breadcrumbs": "^3.2.0",
     "astro-capo": "^0.0.1",
     "astro-compressor": "^0.4.1",
-    "astro-purgecss": "^4.8.0",
+    "astro-purgecss": "^5.2.2",
     "purgecss": "^6.0.0",
     "sharp": "^0.33.5",
     "spotify-url-info": "^3.2.17",
