--- a/config.yaml
+++ b/config.yaml
@@ -23,7 +23,7 @@ site:
       - name: Twitter
         url: https://x.com/fractalcounty
       - name: Bluesky
-        url: https://bsky.app/fractalcounty
+        url: https://bsky.app/profile/fractalcounty.com
       - name: GitHub
         url: https://github.com/fractalcounty
       - name: Instagram
