--- a/package.json
+++ b/package.json
@@ -11,12 +11,12 @@
     "lint": "eslint . --flag unstable_ts_config --fix && prettier --write ."
   },
   "dependencies": {
-    "@astrojs/mdx": "^4.1.1",
+    "@astrojs/mdx": "4.2.1",
     "@astrojs/rss": "^4.0.11",
-    "@astrojs/sitemap": "^3.2.1",
-    "@astrojs/tailwind": "^6.0.0",
+    "@astrojs/sitemap": "3.3.0",
+    "@astrojs/tailwind": "6.0.1",
     "@playform/inline": "^0.1.0",
-    "astro": "^5.4.3",
+    "astro": "5.5.4",
     "astro-breadcrumbs": "^3.2.0",
     "astro-capo": "^0.0.1",
     "astro-compressor": "^0.4.1",
@@ -48,7 +48,6 @@
     "astro-font": "^0.1.81",
     "astro-icon": "^1.1.2",
     "astro-link": "^1.2.1",
-    "astro-opengraph-images": "^1.11.7",
     "clsx": "^2.1.1",
     "daisyui": "^4.12.14",
     "depcheck": "^1.4.7",
